title component & design

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-title-page [menu]="menu"></app-title-page>
 <div class="container-fluid">
   <div class="jumbotron">
     <h1 class="display-4">{{'page.home.greeting'|translate}}</h1>
