--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-title-page [menu]="menu"></app-title-page>
 <div class="container-fluid">
   <div class="summary-info ">
     <div class="row ml-1">
@@ -18,15 +19,15 @@
 <div *ngIf="chartRatePerMonth" class="chart col-lg-6">
   <div class="col-lg-12">
     <label>{{'common.calendar.year' | translate}} <input type="text" [(ngModel)]="year" maxlength="4"></label>
-    <fa-icon  class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
+    <fa-icon class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
     <canvas id="ratePerMonth">{{ chartRatePerMonth }}</canvas>
   </div>
 </div>
 <div *ngIf="chartTotalPerCustomer" class="chart col-lg-6">
   <div class="col-lg-12">
-    
+
     <label style="visibility:hidden">Year <input type="text" [(ngModel)]="year" maxlength="4"></label>
-    <fa-icon style="visibility:hidden"  class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
+    <fa-icon style="visibility:hidden" class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
     <canvas id="totalPerCustomer">{{ chartTotalPerCustomer }}</canvas>
   </div>
 </div>
