--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -62,8 +62,8 @@
   </div>
 </div>
 <div class="col-lg-12 row" style="padding: 0; margin:0">
-  <div class="col-lg-2" style="padding:0; margin:0">
-    <span class="hidebtn" (click)="openModal(columnHide)" style="float: left;">{{'datatable.hide' | translate }}</span>
+  <div class="col-lg-2 p-1" style="padding:0; margin:0">
+    <span class="hidebtn lead text-uppercase" (click)="openModal(columnHide)" style="float: left;">{{'datatable.hide' | translate }}</span>
   </div>
   <div class="col-lg-10" style="text-align: right; padding: 0; margin: 0">
     <app-pagination [dataSource]="dataSource" (newData)="refreshGrid($event)"></app-pagination>
