--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,30 +1,33 @@
-<div class="form-group"  *ngIf="!selectOnly">
-  <button class="btn btn-outline-secondary" (click)="newProduct()">
-    <fa-icon [icon]="faPlus">
+<app-title-page [menu]="menu"></app-title-page>
+<div class="col-lg-12">
+  <div class="form-group" *ngIf="!selectOnly">
+    <button class="btn btn-outline-secondary" (click)="newProduct()">
+      <fa-icon [icon]="faPlus">
 
-    </fa-icon>
-    {{'common.action.add' | translate}}
-  </button>
-  <app-data-table 
-  [dataSource]="productRestService" 
-  [dataColumns]="dataColumns"
-  (editEvent)="tableEdit($event)"
-  (consultEvent)="tableConsult($event)"
-  (deleteEvent)="tableDelete($event)"
-  ></app-data-table>
-</div>
+      </fa-icon>
+      {{'common.action.add' | translate}}
+    </button>
+    <app-data-table
+      [dataSource]="productRestService"
+      [dataColumns]="dataColumns"
+      (editEvent)="tableEdit($event)"
+      (consultEvent)="tableConsult($event)"
+      (deleteEvent)="tableDelete($event)"
+    ></app-data-table>
+  </div>
 
-<div *ngIf="selectOnly">
-  <h5>{{'page.product.searchProduct'|translate}}</h5>
-  Type: <select [(ngModel)]="typeFilter">
+  <div *ngIf="selectOnly">
+    <h5>{{'page.product.searchProduct'|translate}}</h5>
+    Type: <select [(ngModel)]="typeFilter">
     <option value="-1">All</option>
     <option value="0">Service</option>
     <option value="1">Article</option>
   </select>
-  {{'common.name'| translate}}: <input [(ngModel)]="nameFilter">
-  
-  <app-data-table
-    [dataSource]="productRestService"
-    [dataColumns]="dataColumns"
-  ></app-data-table>  
+    {{'common.name'| translate}}: <input [(ngModel)]="nameFilter">
+
+    <app-data-table
+      [dataSource]="productRestService"
+      [dataColumns]="dataColumns"
+    ></app-data-table>
+  </div>
 </div>
