extract gdpr into separate component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,13 +52,5 @@
   </div>
 </div>
 <!-- Footer -->
-<footer *ngIf="gdprShow()" class="footer bg-dark p-2">
-  <div class="container ">
-    <p class="text-white lead text-uppercase">{{'main.gdpr'|translate}}</p>
-    <button class="btn btn-success text-uppercase text-white" (click)="gdprAccepted()">
-      {{'common.action.accept'|translate}}
-    </button>&nbsp;
-    <a href="https://google.fr" class="btn btn-danger text-white">{{'common.action.refuse'|translate}}</a>
-  </div>
-</footer>
+<app-gdpr></app-gdpr>
 <!-- Footer -->
