remove unused css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <!-- Navbar -->
 <app-navbar></app-navbar>
 <!-- Navbar -->
+<!-- Content -->
 <div>
   <div class="container-fluid routerContent">
     <router-outlet></router-outlet>
   </div>
 </div>
+<!-- Content -->
 <!-- Footer -->
 <app-gdpr></app-gdpr>
 <!-- Footer -->
