--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -10,6 +10,7 @@
     font-weight: 600;
 }
 .details-container {
+  display: inline-block;
     background-color: #f6ffef;
     border-radius: 5px 5px 0px 0px;
     border: solid 1px #b7b7b7;
