custom action on datatable

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -21,7 +21,7 @@
                         (editEvent)="openInvoice($event)"
                         (consultEvent)="openInvoice($event)"
                         (deleteEvent)="deleteInvoice($event)"
-                        (customEvent)="customEvent($event)"
+                        (customEvent)="customDataTableEvent($event)"
         ></app-data-table>
 
         <!-- NEW VERSION -->
