--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -65,7 +65,7 @@
       </div>
   </div>
 </div>
-<div class="col-12 row p-2" style="padding: 0; margin:0">
+<div class="col-12 row p-2" style="padding: 0 !important; margin:0">
   <div class="col-2 d-inline" style="padding:0; margin:0">
     <span class="hidebtn lead text-uppercase" (click)="openModal(columnHide)" style="float: left;">{{'datatable.hide' | translate }}</span>
   </div>
