--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -7,4 +7,8 @@
       <p class="lead">{{message|translate}}</p>
     </div>
   </div>
+  <audio class="container" autoplay="autoplay" controls preload="none">
+    <source src="assets/mp3/error.mp3">
+  </audio>
+
 </div>
