--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<app-title-page [menu]="menu"></app-title-page>
+<app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
 <div class="col-lg-12">
   <div class="form-group" *ngIf="!selectOnly">
     <button class="btn btn-outline-secondary" (click)="newProduct()">
