--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -7,7 +7,7 @@
       <p class="lead">{{message|translate}}</p>
     </div>
   </div>
-  <audio class="container" autoplay="autoplay" controls preload="none">
+  <audio class="container" autoplay="autoplay" controls>
     <source src="assets/mp3/error.mp3">
   </audio>
 
