--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="jumbotron">
       <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4 col-sm-12">
           <h1 class="display-4 text-danger">{{status}} </h1>
           <p class="lead text-danger">{{label | translate}}</p>
           <p class="lead">{{message|translate}}</p>
         </div>
-        <div class="col-8">
+        <div class="col-lg-8 col-sm-12">
           <img src="assets/img/error.jpg" class="img img-fluid col-12 ">
           <audio class="col-12" autoplay="autoplay" controls>
             <source src="assets/mp3/error.mp3">
