--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <img src="assets/img/error.jpg" class="img img-fluid col-12 ">
-          <audio class="col-12" autoplay="autoplay" controls>
+          <audio class="col-12" autoplay controls>
             <source src="assets/mp3/error.mp3">
           </audio>
         </div>
