--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,17 +4,16 @@
     <div class="btn-group">
       <button class="btn btn-outline-secondary" (click)="newProduct()">
         <fa-icon [icon]="faPlus"></fa-icon>
-        {{'common.action.add' | translate}}
+        <span class="d-none d-lg-inline">{{'common.action.add' | translate}}</span>
       </button>
       <a class="btn btn-outline-info" [href]="downloadCSV()">
         <fa-icon [icon]="faDownload">
-
         </fa-icon>
-        {{'page.product.downloadtemplatecsv' | translate}}
+        <span class="d-none d-lg-inline">{{'page.product.downloadtemplatecsv' | translate}}</span>
       </a>
       <label class="btn btn-outline-primary" for="file">
         <fa-icon [icon]="faUpload"></fa-icon>
-        {{'page.product.uploadcsv' | translate}}
+        <span class="d-none d-lg-inline">{{'page.product.uploadcsv' | translate}}</span>
       </label>
       <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
     </div>
