invert order show table invoice

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -23,6 +23,7 @@
                         (deleteEvent)="deleteInvoice($event)"
                         (customEvent)="customDataTableEvent($event)"
         ></app-data-table>
+        false
 
         <!-- NEW VERSION -->
 
