--- a/src/app/title-page/title-page.component.html
+++ b/src/app/title-page/title-page.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-12">
-  <fa-icon [icon]="menu.icon" class="header-icon"
-           [ngStyle]="{'border-color': menu.color, 'color': menu.color}"></fa-icon>
   <h5>
-    {{menu.label | translate}}
+    <fa-icon [icon]="menu.icon" class="header-icon"
+             [ngStyle]="{'border-color': menu.color, 'color': menu.color}"></fa-icon>&nbsp;{{menu.label | translate}}
   </h5>
+  <hr>
 </div>
