--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,16 +3,16 @@
   <div class="form-group" *ngIf="!selectOnly">
     <div class="btn-group">
       <button class="btn btn-outline-secondary" (click)="newProduct()">
-        <fa-icon [icon]="faPlus"></fa-icon>
+        <fa-icon [icon]="faPlus"></fa-icon>&nbsp;
         <span class="d-none d-lg-inline">{{'common.action.add' | translate}}</span>
       </button>
       <a class="btn btn-outline-info" [href]="downloadCSV()">
-        <fa-icon [icon]="faDownload">
+        <fa-icon [icon]="faDownload">&nbsp;
         </fa-icon>
         <span class="d-none d-lg-inline">{{'page.product.downloadtemplatecsv' | translate}}</span>
       </a>
       <label class="btn btn-outline-primary" for="file">
-        <fa-icon [icon]="faUpload"></fa-icon>
+        <fa-icon [icon]="faUpload"></fa-icon>&nbsp;
         <span class="d-none d-lg-inline">{{'page.product.uploadcsv' | translate}}</span>
       </label>
       <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
