generate csv from datatable

--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -28,6 +28,14 @@
       </div>
     </div>
 </div>
+<div class="row">
+  <div class="col-12">
+    <button (click)="generateCSV()" class="btn btn-outline-dark mt-3">
+      <fa-icon [icon]="faFileExcel"></fa-icon>
+      {{'common.action.generatecsv' | translate}}
+    </button>
+  </div>
+</div>
 <div class="mainGrid  mt-3">
   <div class="gridCol gridHeaders">
       <ng-container *ngFor="let row of dataColumns">
