--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,8 +1,28 @@
 <app-title-page [menu]="menu" *ngIf="!selectOnly"></app-title-page>
+<div class="col-lg-12 row">
+  <div class="col-lg-6 row">
+    <label class="col-lg-3" for="newProductName">Name</label>
+    <input class="col-lg-9" id="newProductName" type="text" [(ngModel)]="newProduct.name">
+    <label class="col-lg-3" for="newProductUP">Unit price</label>
+    <input class="col-lg-9" id="newProductUP" type="text" [(ngModel)]="newProduct.unitPrice">
+    <label class="col-lg-3" for="newProductQT">Quantity</label>
+    <input class="col-lg-9" id="newProductQT" type="text" [(ngModel)]="newProduct.quantity">
+    <label class="col-lg-3" for="newProductUM">Unif of measure</label>
+    <select class="col-lg-9" style="height:32px">
+      <option>Day</option>
+      <option>Hour</option>
+      <option>Kg</option>
+      <option>Liter</option>
+    </select>
+  </div>
+  <div class="col-lg-6">
+    <input type="file"/>
+  </div>
+</div><br/>
 <div class="col-lg-12">
   <div class="form-group" *ngIf="!selectOnly">
     <div class="btn-group">
-      <button class="btn btn-outline-secondary" (click)="newProduct()">
+      <button class="btn btn-outline-secondary" (click)="saveNewProduct()">
         <fa-icon [icon]="faPlus"></fa-icon>&nbsp;
         <span class="d-none d-lg-inline">{{'common.action.add' | translate}}</span>
       </button>
